...
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToShoppingCartBtn"
                style="?attr/borderlessButtonStyle"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:text="@string/addToCart"
                app:icon="@drawable/ic_baseline_shopping_cart_24" />

...
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_comment_24" />

                    <EditText
                        android:id="@+id/etComment"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:background="@null"
...
