...
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"

        />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_soppingCart"
        />

    <item
        android:id="@+id/navigation_create_post"
...
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>
