...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">
...
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:text="@{'$'+comment.comment}"-->
<!--                     />-->
                </LinearLayout>

                <ImageView
                    android:id="@+id/clearItem"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:layout_weight=".1"
                    />
...
